--- a/marvelApp/Components/Cells/SecondScreen/CharacterListTableViewCell.xib
+++ b/marvelApp/Components/Cells/SecondScreen/CharacterListTableViewCell.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="Nj3-D4-AFc" userLabel="Music List Table View Cell" customClass="MusicListTableViewCell" customModule="marvelApp" customModuleProvider="target">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="Nj3-D4-AFc" userLabel="Character List Table View Cell" customClass="CharacterListTableViewCell" customModule="marvelApp" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="350" height="110"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Nj3-D4-AFc" id="NEO-8K-5wa">
