--- a/marvelApp/Modules/CharacterScreen/CharacterListViewController.xib
+++ b/marvelApp/Modules/CharacterScreen/CharacterListViewController.xib
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SecondScreenViewController" customModule="viperProject" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SecondScreenViewController" customModule="marvelApp" customModuleProvider="target">
             <connections>
                 <outlet property="searchView" destination="EnI-vU-0GI" id="qAY-dn-P5F"/>
                 <outlet property="tableView" destination="fR0-o6-2i9" id="6RD-Ze-yJC"/>
@@ -18,7 +18,7 @@
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" userLabel="View" customClass="MusicListTableViewCell" customModule="viperProject" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" userLabel="View" customClass="CharacterListTableViewCell">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
