--- a/marvelApp/Base.lproj/LaunchScreen.storyboard
+++ b/marvelApp/Base.lproj/LaunchScreen.storyboard
@@ -19,17 +19,17 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="splash" translatesAutoresizingMaskIntoConstraints="NO" id="dfh-yw-6Jt">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="8" width="375" height="659"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="375" id="Q71-Na-llb"/>
-                                    <constraint firstAttribute="height" constant="647" id="ijr-28-yo1"/>
+                                    <constraint firstAttribute="height" constant="659" id="ijr-28-yo1"/>
                                 </constraints>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="dfh-yw-6Jt" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="QLu-pL-1l0"/>
-                            <constraint firstItem="dfh-yw-6Jt" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="kJa-P6-RCf"/>
+                            <constraint firstItem="dfh-yw-6Jt" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="-12" id="kJa-P6-RCf"/>
                             <constraint firstItem="dfh-yw-6Jt" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="ngr-aP-Rcm"/>
                             <constraint firstItem="dfh-yw-6Jt" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="o8W-Y6-TTg"/>
                         </constraints>
